<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.config.ConfigWifiFragment">

    <TextView
        android:id="@+id/config_wifi_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_wifi_intro"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox android:id="@+id/config_wifi_checkbox_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_wifi_intro"
        android:text="@string/config_wifi_checkbox_forget"/>

    <TextView android:id="@+id/config_wifi_please_wait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_hourglass_bottom_24"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_wifi_checkbox_forget"
        android:text="@string/config_wifi_please_wait_connection"/>

    <Button
        android:id="@+id/config_wifi_current_network"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:text="SSID"
        android:drawableLeft="@drawable/ic_home_wifi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_wifi_please_wait"/>

    <Button
        android:id="@+id/config_wifi_btn_another"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_wifi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_wifi_current_network"
        android:text="@string/config_wifi_another"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/config_wifi_title_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_wifi_current_network"
        android:text="@string/config_wifi_list_title"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/config_pBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/config_wifi_title_list"
        android:visibility="gone"
        >
    </ProgressBar>


    <ScrollView
        android:id="@+id/scan_result_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_wifi_title_list"
        app:layout_constraintBottom_toTopOf="@+id/config_spacer"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scan_results_wifi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/config_wifi_row_scan_result"
            android:visibility="gone"
            />

    </ScrollView>

    <Space
        android:id="@+id/config_spacer"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>