<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.config.ConfigFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.config.ConfigFragment">

        <TextView
            android:id="@+id/text_config_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_config_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:drawableLeft="@drawable/ic_bluetooth"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_config_intro" />

        <TextView
            android:id="@+id/text_title_list_bt_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/config_bluetooth_title_list_devices"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:visibility="gone"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_config_bluetooth" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scan_results_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_title_list_bt_devices"
            app:layout_constraintBottom_toTopOf="@+id/config_spacer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/config_row_scan_result"
            />

        <TextView
            android:id="@+id/scan_no_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            android:text="@string/config_bluetooth_no_device_found"
            app:layout_constraintTop_toBottomOf="@+id/text_title_list_bt_devices"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/scan_retry"
            app:layout_constraintBottom_toTopOf="@+id/config_spacer"
            />

        <Button
            android:id="@+id/scan_retry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/config_bluetooth_retry_button"
            android:drawableLeft="@drawable/ic_bluetooth_searching"
            app:layout_constraintTop_toBottomOf="@+id/text_title_list_bt_devices"
            app:layout_constraintLeft_toRightOf="@+id/scan_no_result"
            app:layout_constraintBottom_toTopOf="@+id/config_spacer"
            app:layout_constraintRight_toRightOf="parent"/>

        <Space
            android:id="@+id/config_spacer"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>